Added refresh endpoint
